# cthreepo

./: .bumpversion.cfg  .coveragerc  .travis.yml  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  README.rst  STYLE.rst  pyproject.toml  requirements.txt  setup.py
datamodel/: datamodel.yaml  test.yaml
datamodel/apogee/: datamodel.yaml
datamodel/apogee/new/: datamodel.yaml
datamodel/manga/: bintypes.yaml  channels.yaml  datamodel.yaml  products.yaml  templates.yaml  versions.yaml  wavelengths.yaml
datamodel/simple/: datamodel.yaml  products.yaml  versions.yaml
docs/sphinx/: CHANGELOG.rst  Makefile  api.rst  conf.py  index.rst  intro.rst
docs/sphinx/datamodels/: index.rst  products.rst
python/cthreepo/: __init__.py  cli.py  exceptions.py
python/cthreepo/core/: datamodel.py  exceptions.py  fits.py  lists.py  maskbit.py  mixins.py  models.py  objects.py  products.py  structs.py  units.py
python/cthreepo/datamodel/: __init__.py  docudatamodel.py
python/cthreepo/datamodel/manga/: __init__.py  mixins.py
python/cthreepo/datamodel/simple/: __init__.py
python/cthreepo/datamodels/: __init__.py
python/cthreepo/datamodels/catalogs/: allwise.py
python/cthreepo/datamodels/manga/: __init__.py  base.py  maskbit.py
python/cthreepo/datamodels/manga/dap/: MPL4.py  __init__.py  base.py
python/cthreepo/datamodels/manga/drp/: MPL.py  __init__.py  base.py
python/cthreepo/datamodels/muse/: __init__.py  base.py  release.py
python/cthreepo/etc/: datamodel.yaml
python/cthreepo/etc/manga/: bintypes.yaml  products.yaml  templates.yaml
python/cthreepo/io/: datamodel.py  general.py  yaml.py
python/cthreepo/misc/: logger.py
python/cthreepo/tests/: test_main.py
python/cthreepo/tests/core/: test_mixins.py
python/cthreepo/tests/utils/: test_input.py
python/cthreepo/utils/: __init__.py  datamodel.py  general.py  input.py  yaml.py
tests/: test_main.py
