[tool.poetry]
name = "sdss-cthreepo"
version = "0.1.0-alpha.0"
description = "Machine-readable programmatic SDSS datamodel"
authors = ["Brian Cherinka <bcherinka@stsci.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/sdss/cthreepo"
repository = "https://github.com/sdss/cthreepo"
documentation = "https://sdss-cthreepo.readthedocs.org"
keywords = ["astronomy", "software"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "cthreepo", from = "python" }
]
include = ["python/cthreepo/etc/*", "cextern/**/*", "LICENSE.md"]
build = "build.py"

[tool.poetry.scripts]
cthreepo = "cthreepo.cli:main"

[tool.poetry.dependencies]
python = "^3.7"
sdss-tree = ">=2.15.2"
sdss-access = ">=0.2.3"
sdsstools = ">=0.4.0"
Sphinx = {version="^3.0.0", optional=true}
fuzzy-types = "^0.1.1"
pydantic = "^1.6.1"
orjson = "^3.3.1"
pyyaml = "^5.3.1"
marshmallow = "^3.7.1"


[tool.poetry.dev-dependencies]
ipython = ">=7.11.0"
matplotlib = ">=3.1.1"
flake8 = ">=3.7.9"
doc8 = ">=0.8.0"
pytest = ">=5.2.2"
pytest-asyncio = ">=0.10.0"
pytest-cov = ">=2.8.1"
pytest-mock = ">=1.13.0"
pytest-sugar = ">=0.9.2"
isort = ">=4.3.21"
codecov = ">=2.0.15"
coverage = {version = ">=5.0", extras = ["toml"]}
ipdb = ">=0.12.3"
rstcheck = "^3.3.1"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.isort]
line_length = 79
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "cthreepo"
known_sdss_party = ["sdsstools"]
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--cov cthreepo --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["python/cthreepo/*"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.0"]
